apps/open-speed-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-speed-test
  labels:
    app.kubernetes.io/part-of: open-speed-test
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
