apps/open-speed-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-speed-test
  namespace: open-speed-test
  labels:
    app.kubernetes.io/name: open-speed-test
    app.kubernetes.io/part-of: open-speed-test
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: open-speed-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-speed-test
        app.kubernetes.io/part-of: open-speed-test
    spec:
      automountServiceAccountToken: false
      containers:
        - name: open-speed-test
          image: openspeedtest/latest@sha256:1745e913f596fe98882b286a67751efdae74774e9caa742a4934bb056e8748d2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SETGID
            seccompProfile:
              type: RuntimeDefault
      terminationGracePeriodSeconds: 10
